src/global.scss
/* ... */
.ordre_header .header_right .header_mini_cart_link span.business_name_masquerade {
	color: #23c1ea;
	display: inline-block;
	font-size: 16px;
	margin-right: 0px !important;
	position: relative;
	top: -6px;
	right: 3px;
	line-height: 1;
	transform: translateY(-50%);
	overflow: hidden;
    word-wrap: break-word;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.content_sorter .collection_title {
	display: block;
	float: left;
	text-transform: uppercase;
	font-size: 18px;
	font-family: 'Avenir Book';
	position: relative;
	top: 50%;
	-webkit-transform: translateY(-50%);
	transform: translateY(-50%);
    text-align: left;
}

.content_sorter .collection_title span {
    margin-top: 10px;
	display: inline-block;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    max-width: 100%;
}

.ordre_subheader .content_sorter {
	text-align:right;
	border-right:0px solid #cccccc;
	border-left:1px solid #b6b6b6;
	padding:10px 15px;
	height:56px;
}

page-linesheet .ordre_subheader .content_sorter {
	border-left:none;
	padding-left:20px;
}

page-settings .native-input.sc-ion-input-ios {
    padding: 11px 15px 11px 15px;
    width: calc(82% - 8px);
    border: 1px solid !important;
    margin: 6px 0 24px 0;
}

.ordre_subheader .content_sorter .sorter_item {
	display:inline-block;
	position:relative;
	border:1px solid #333333;
	padding:2px 10px;
}

.ordre_subheader .content_sorter .sorter_item.line_sheet_link {
	padding:2px 10px;
}

.ordre_subheader .content_sorter .sorter_item:nth-child(1) {
	margin-right:20px;
}

.ordre_subheader .content_sorter .sorter_item:nth-child(2) {
	margin-right:15px;
}

.ordre_subheader .content_sorter .sorter_item span {
	border:none !important;
}

.ordre_subheader .content_sorter .sorter_item span.btn-default:active {
	background:transparent !important;
	outline:none !important;
}

.ordre_subheader .content_sorter .sorter_item span.btn-default:hover {
	background:transparent !important;
	outline:none !important;
}

.ordre_subheader .content_sorter .sorter_item span.btn-default:focus {
	background:transparent !important;
	outline:none !important;
}

.ordre_subheader .content_sorter .sorter_item .dropdown_menu_container {
	width:328px;
	position:absolute;
	top:0px;
	top:40px;
	right:0px;
	display:none;
	background:#ffffff;
	transition: height .1s ease;
	transition-delay:.1s;
	z-index:99;
}

.ordre_subheader .content_sorter .sorter_item .dropdown_menu_container:after {
	display:block;
	content:'';
	clear:both;
}

.ordre_subheader .content_sorter .sorter_item .dropdown_menu_container ul {
	list-style-type:none;
	padding:0px;
	overflow:hidden;
	margin-bottom:0px;
	background-color:#ffffff;
}

.ordre_subheader .content_sorter .sorter_item .dropdown_menu_container ul:after {
	content:'';
	display:block;
	clear:both;
}

.ordre_subheader .content_sorter .sorter_item .dropdown_menu_container ul li {
	border-bottom:1px solid #c1c1c1;
	line-height:1;
	padding:15px;
}

.ordre_subheader .content_sorter .sorter_item .dropdown_menu_container ul li label {
	text-align:left;
	font-size:16px;
	text-transform:uppercase;
	font-family:'Avenir Medium';
	display:block;
	margin-bottom:0px !important;
}

.ordre_subheader .content_sorter .sorter_item .dropdown_menu_container ul li label input {
	float:right;
}

.ordre_subheader .content_sorter .sorter_item .dropdown_menu_container .dropdown_menu_clear {
	text-align:left;
	background:#ffffff;
	padding-top:20px;
	padding-bottom:20px;
}

.ordre_subheader .content_sorter .sorter_item .dropdown_menu_container .dropdown_menu_clear span {
	display:inline-block;
	background-color:#909090;
	color:#ffffff;
	text-transform:uppercase;
	padding:5px;
	font-size:16px;
	font-family:'San Francisco Regular';
}

.ordre_subheader .content_sorter .sorter_item .dropdown_menu_container .dropdown_menu_sort {
	background:#ffffff;
	padding-top:20px;
	padding-bottom:20px;
}

.ordre_subheader .content_sorter .sorter_item .dropdown_menu_container input {
	display:none;
}

.ordre_subheader .content_sorter .sorter_item .dropdown_menu_container input:checked + label {
	background:url(./assets/images/check_menu_icon.png) no-repeat right;
}

.ordre_subheader .content_sorter .sorter_item .dropdown_menu_container .dropdown_menu_sort span {
	text-transform:uppercase;
	padding:4px 20px;
	border-radius:0px;
	color:#b1a8a8;
	border-color:#b1a8a8;
	border:1px solid !important;
	margin-right:10px;
	font-size:16px;
	font-family:'San Francisco Regular';
	display:inline-block;
}

.content_sorter .sorter_item:active .dropdown_menu_container {
	height:100% !important;
	overflow:visible !important;
}

.content_sorter .sorter_item .dropdown_menu_container:hover {
	height:100%;
	overflow:visible;
}

.ordre_subheader .page_serch_wrapper {
	padding:0px;
}

.ordre_subheader .page_serch_wrapper input {
	width:100%;
	border:none;
	height:50px;
	padding:28px 10px;
	background:url(./assets/images/search_icon.png) no-repeat right;
	background-position-x:95%;
	font-size:16px;
	font-family:'San Francisco RegularOtf';
	text-transform:uppercase;
}

.ordre_subheader .content_sorter .sort {
	text-transform:uppercase;
	padding:3px 10px;
	border-radius:0px;
	color:#333333;
	border-color:#b1a8a8;
	font-size:16px;
	font-family:'San Francisco RegularOtf';
}

.ordre_subheader .content_sorter .filter {
	text-transform:uppercase;
	padding:3px 10px;
	border-radius:0px;
	color:#333333;
	border-color:#b1a8a8;
	font-size:16px;
	font-family:'San Francisco RegularOtf';
}

.designer_list {
	padding:0px !important;
}

.designer_list .designer_item .designer_item_image_wrapper img {
	position:relative;
	width:100%;
}

.designer_list .designer_item {
	padding:0px;
}

.designer_list .designer_item .designer_item_image_wrapper {
	position:relative;
}
/* ... */

